wp-content/themes/lbcore/resources/less/pages/map.less
/* ... */
.map__permalink {
    position: absolute;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: @texture-light;
    // padding: @double-vertical @double-side; // Setting in .wrappers__permalink instead.
    transition: transform 250ms ease-in-out;
    z-index: 3;
    overflow-y: scroll;
    transform: translateX(-100%);

    @media @medium-screens-max {
        height: 67vh;
    }

    &.is-active {
        transform: none;

        // adjust popup size when permalink is open
        @media @large-screens-min {
            ~ .map__mapbox {
                .map__popup {
                    min-width: 140px;
                    max-width: 15vw !important;
                }
            }
        }
    }

    &.is-hidden.is-active {
        transform: translateX(-100%);
    }

    @media @large-screens-min {
        width: 57vw;
        max-width: 1030px;

        .is-sticky & {
            position: fixed;
            top: 0;
        }
    
        .is-grounded & {
            top: auto;
            bottom: 0;
        }
    }
}

.map__permalink-close {
    position: sticky;
    top: @24px; // magic
    margin-top: @24px;
    margin-right: @full-vertical;
    float: right;
    z-index: 20;
    //background: @texture-light;

    @media @medium-screens-max {
        margin-top: 0;
        top: @18px;
    }

    @media @small-screens-max {
        &:focus {
            outline: none; // color still changes.
        }
    }
}

.map__scroll-overlay {
    width: 100%;
    // height: 100vh;
    
    @media @medium-screens-max {
        height: auto;
        display: flex;
        flex-direction: column-reverse;
    }
}

.map__sidebar {
    position: relative;
    //width: 100%;
    padding: 0 @full-side;
    padding-top: 0;
    background: @slate @texture-dark;

    z-index: 4; // sits above permalink panel and mapbox controls

    @media @medium-screens-max {
        max-height: 33vh;
        overflow-x: scroll;
        overflow-y: hidden;
        padding: 0 @half-side;
    }

    @media @large-screens-min {
        position: relative;
        width: 26%; //33.5%;
        max-width: @sidebar-width;
        height: auto;
        min-height: 100vh;
        padding: 0 @46px;
        // overflow-y: scroll;
    }

    &-controls {
        position: relative;
        background: @slate @texture-dark;
        padding: @half-vertical 0;
        padding-bottom: @quarter-vertical;

        @media @medium-screens-max {
            position: sticky;
            left: 0;

            display: flex;
            flex-wrap: wrap;
            align-items: center;
            
            margin-left: @half-side;
            margin-right: @half-side;
            padding: 4px 0;
        }

        @media @large-screens-min {
            position: sticky;
            top: 0;
            z-index: 4;
        }
    }

    &-label {
        .m-type__type-size(@non-pariel-text-size, 16);

        letter-spacing: 1px;
        color: @white;
        margin-right: @full-side;

        @media @small-screens-max {
            .m-type__type-size(@micro-text-size, 12);
        }

        @media @large-screens-min {
            padding-top: @14px;
        }
    }

    &-desc {  
        margin-top: 8px;

        @media @small-screens-max {
            .m-type__type-size(@micro-text-size, 12);
        }

        @media @medium-screens-max {
            flex: 0 0 100%;
            margin-top: 0;
        }

        /* toggle description depending on which sort is active */
        &[data-sort=places] {
            .map__sidebar-controls[data-active-sort=people] & {
                display: none;
            }
        }

        &[data-sort=people] {
            .map__sidebar-controls[data-active-sort=places] & {
                display: none;
            }
        }
    }
}

.map__sort-btn {

    text-transform: uppercase;

    @media @medium-screens-max {
        .button__no-button();
        .styles__sequel;
        .m-type__type-size(@micro-text-size, 12);

        color: @white;
        margin-top: 0;
        margin-right: @half-side;
        padding: 0;

        &.is-active {
            color: @action-gold;
        }
    }

    @media @large-screens-min {
        .button__full-width();
        .m-type__type-size(@non-pariel-text-size, 16);

        border: 4px solid @action-gold;
        margin-top: 12px;
    
        &:not(.is-active) {
            color: @gold;
            background: transparent;
            border-color: @gold;
        }

        &:hover {
            background: @gold;
            color: @charcoal;
        }
    }

    &:focus {
        outline: 2px dashed @white;
    }

    &:not(:focus-visible) {
        outline: none;
    }
}

/* location cards */
.map__cards {
    display: none;
    margin: -@full-vertical 0 0;

    @media @medium-screens-max {
        height: 90%;
        margin-top: 0;
        margin-bottom: 0;
        padding-top: 0;
        padding-bottom: @full-vertical;
    }

    @media @large-screens-min {
        padding-bottom: @full-vertical;;
    }
    
    [data-active-sort="places"] ~ &[data-by="places"],
    [data-active-sort="people"] ~ &[data-by="people"] {
        display: block;
        
        @media @medium-screens-max {
            display: flex;
            flex-direction: row;
        }
    }
}

.map__card-item {
    margin: @full-vertical 0;

    &:first-of-type {
        @media @large-screens-min {
            padding-top: @half-vertical;
        }
    }

    @media @small-screens-max {
        max-width: @120px;
    }

    @media @medium-screens-max {
        flex: 40%;
        margin: 0;
        padding: 0 @quarter-side;
    }

    @media @small-screens-max {
        flex: 1 0 50%;
    }
}
/* ... */

